Add a nice border to the first letters.

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <nav class="grey lighten-5" role="navigation">
       <div class="container">
         <div class="nav-wrapper">
-          <a id="logo-container" href="#" class="brand-logo">
-          Ernesto Mendoza Blanco
+          <a href="/" class="brand-logo">
+          <span>E</span>rnesto <span>M</span>endoza <span>B</span>lanco
           </a>
           <ul id="nav-desktop" class="right">
             <li class="on"><a href="#!/intro"><span class="mdi-image-wb-cloudy"></span>intro</a></li>
