--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,18 @@
     </nav>
     <div class="main container white z-depth-2">
       <div class="row">
-        <div class="col l9 s12">
+        <div class="col l10 s12">
           <h4 class="header">
+            <span class="left picture col s2">
+              <img src="/img/self2.jpg" class="responsive-img z-depth-1" />
+            </span>
             Full-stack engineer specialized in web development, systems architechture, and best practices.
           </h4>
           <p>I'm a self-taught programmer with special interest in web-related technologies. <br> Having been programming for more than 12 years, I've learnt to identify the best tool for the job, and have used several technologies and programming languages as both passer-by, and certified expert. </p>
           <p>Amateur world traveler eager to learn new languages, taste new food, and reading good books. Night owl incapable to live a day without music, coffee without sugar, and a cigarette every once in a while after a nice meal. </p>
           <p>Currently living in León, Guanajuato, Mexico, with my girlfriend and my lovely dogs.</p>
         </div>
-        <div class="col l3 s12">
+        <div class="col l2 s12 right">
           <h5>Elsewhere</h5>
           <ul>
             <li><a href="http://last.fm/user/panquetofobia">Last.fm</a></li>
