--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             <span class="left picture col s2">
               <img src="/img/self2.jpg" class="responsive-img z-depth-1" />
             </span>
-            Full-stack engineer specialized in web development, systems architechture, and best practices.
+            Full-stack engineer specialized in web development, systems architecture, and best practices.
           </h4>
           <p>I'm a self-taught programmer with special interest in web-related technologies. <br> Having been programming for more than 12 years, I've learnt to identify the best tool for the job, and have used several technologies and programming languages as both passer-by, and certified expert. </p>
           <p>Amateur world traveler eager to learn new languages, taste new food, and reading good books. Night owl incapable to live a day without music, coffee without sugar, and a cigarette every once in a while after a nice meal. </p>
