--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,12 @@
             </span>
             Full-stack engineer specialized in web development, systems architecture, and best practices.
           </h4>
-          <p>I'm a self-taught programmer with special interest in web-related technologies. <br/> During my 12+ years programming carreer, I've learned to identify the best tool for the job, and have used several technologies and programming languages as both passer-by, and certified expert. </p>
-          <p>As an amateur world traveler and music lover, I'm always eager to learn new languages, taste new food, and read good books. I'm a night owl incapable to live a day without music, coffee without sugar, and a cigarette every once in a while after a nice meal. </p>
-          <p>Currently living in León, Guanajuato, Mexico, with my girlfriend and my lovely dogs.</p>
+          <p>I'm a self-taught programmer with special interest in web-related technologies. <br/>
+              During my 12+ years programming carreer, I've learned to identify the best tool for the job,
+              and have used several technologies and programming languages as both passer-by, and certified expert. </p>
+          <p>As an amateur world traveler and music lover, I'm always eager to learn new languages, taste new food,
+              and read good books. I'm a night owl incapable of living a day without music, unsweetened coffee, or a cigarette every once in a while after a nice meal. </p>
+          <p>Currently living in León, Guanajuato, México, with my girlfriend and my lovely dogs.</p>
         </div>
         <div class="col l2 s12 right">
           <h5>Elsewhere</h5>
