Add list of attended conferences and update programming langs.

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
             </div>
             <dl>
               <dt>Programming languages</dt>
-              <dd>Expert in PHP, Python and Javascript; Proficient in Ruby, Bash, Objective-C and Java.</dd>
+              <dd>Expert in PHP, Python, Javascript, Swift and Objective-C; Proficient in Ruby, Bash, and Java.</dd>
               <dt>Markup and data interchange languages</dt>
               <dd>XML, XHTML, HTML, HTML5, JSON, CSS, YAML.</dd>
               <dt>Data stores</dt>
@@ -138,6 +138,23 @@
           </div>
           <div class="divider"></div>
 
+          <div class="section scrollspy" id="conferences">
+            <h5><i class="tiny mdi-hardware-keyboard-arrow-right"></i>Conferences</h5>
+            <dl>
+              <dt><a href="http://futurestack.io/">FutureStack</a></dt>
+              <dd>San Francisco 2015</dd>
+              <dt><a href="http://conferences.oreilly.com/oscon/open-source">OSCON</a></dt>
+              <dd>Portland 2013</dd>
+              <dt><a href="https://futureinsightslive.com">Future Insights Live</a></dt>
+              <dd>Las Vegas 2013</dd>
+              <dt><a href="http://aneventapart.com/">An Event Apart</a></dt>
+              <dd>San Diego 2013</dd>
+              <dt><a href="https://www.akamai.com/us/en/about/events/edge-conference/">Akamai Edge</a></dt>
+              <dd>Las Vegas 2012</dd>
+            </dl>
+          </div>
+          <div class="divider"></div>
+
           <div class="section scrollspy" id="education">
             <h5><i class="tiny mdi-hardware-keyboard-arrow-right"></i>Education</h5>
             <dl>
@@ -165,6 +182,7 @@
           <ul class="section table-of-contents">
             <li><a href="#expertise" class="">Expertise</a></li>
             <li><a href="#experience">Experience</a></li>
+            <li><a href="#conferences">Conferences</a></li>
             <li><a href="#education" class="">Education</a></li>
             <li><a href="/attachments/cv_en.pdf" target="_blank"><i class="mdi-file-file-download"></i>PDF <small>full</small></a></li>
             <li><a href="/attachments/cv_en_tldr.pdf" target="_blank"><i class="mdi-file-file-download"></i>PDF <small>TL;DR</small></a></li>
