--- a/public/index.html
+++ b/public/index.html
@@ -217,7 +217,7 @@
       <footer class="page-footer light-blue lighten-5">
         <div class="container">
           <p id="made-in-mexico">
-            Made with love somewhere in México. <a class="right" href="https://github.com/ernestom/emb.mx"><small>Source code.</small></a>
+            <a class="right" href="https://github.com/ernestom/emb.mx"><small>Source code.</small></a>
           </p>
         </div>
       </footer>
