Minor copy change.

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             <span class="left picture col s2">
               <img src="/img/self2.jpg" class="responsive-img z-depth-1" />
             </span>
-            Full-stack engineer specialized in web development, systems architecture, and best practices.
+            Full-stack engineer focused on web development, systems architecture, and best practices.
           </h4>
           <p>I'm a self-taught programmer with special interest in web-related technologies. <br/>
               During my 12+ years programming carreer, I've learned to identify the best tool for the job,
