--- a/public/adopciones/clarita/index.html
+++ b/public/adopciones/clarita/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>Adopta a Clarita</title>
 <meta property="og:title" content="Adopta a Clarita"/>
 <meta property="og:description" content="Clarita es una perrita de 1 año, rescatada de la calle en busca de hogar."/>
