Update attended conferences.

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
             <h5><i class="tiny mdi-hardware-keyboard-arrow-right"></i>Expertise</h5>
             <div class="row">
               <p class="col s12 m6 l6">
-              Web programming, multi-tier architectures, RESTful architectures, code validation, quality assurance, best practices, deployment automation, project management, API design.
+              Web and systems programming, multi-tier/RESTful/microservices architectures, code validation, quality assurance, best practices, deployment automation, dev operations, project management, API design.
               </p>
               <p class="col s12 m6 l6">
                 <a href="http://www.zend.com/en/yellow-pages/ZEND010525" target="_blank">
@@ -141,14 +141,16 @@
           <div class="section scrollspy" id="conferences">
             <h5><i class="tiny mdi-hardware-keyboard-arrow-right"></i>Conferences</h5>
             <dl>
+              <dt><a href="http://monitorama.com/">Monitorama</a></dt>
+              <dd>Portland 2017</dd>
               <dt><a href="http://futurestack.io/">FutureStack</a></dt>
-              <dd>San Francisco 2015</dd>
+              <dd>San Francisco 2015, 2016</dd>
               <dt><a href="http://conferences.oreilly.com/oscon/open-source">OSCON</a></dt>
-              <dd>Portland 2013</dd>
+              <dd>Portland 2013, Austin 2016</dd>
               <dt><a href="https://futureinsightslive.com">Future Insights Live</a></dt>
               <dd>Las Vegas 2013</dd>
               <dt><a href="http://aneventapart.com/">An Event Apart</a></dt>
-              <dd>San Diego 2013</dd>
+              <dd>San Diego 2013, San Francisco 2016</dd>
               <dt><a href="https://www.akamai.com/us/en/about/events/edge-conference/">Akamai Edge</a></dt>
               <dd>Las Vegas 2012</dd>
             </dl>
