--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,8 @@
               <dd>XML, XHTML, HTML, HTML5, JSON, CSS, YAML.</dd>
               <dt>Data stores</dt>
               <dd>Expert in MySQL, MongoDB, CouchDB and Memcache; Proficient in PostgreSQL, SQLite and FireBase.</dd>
-              <dt>Web servers and reverse/caching proxies</dt>
-              <dd>Apache, Nginx and Varnish.</dd>
+              <dt>Web servers, Load balancers, and reverse/caching proxies</dt>
+              <dd>Apache, Nginx, HAProxy, and Varnish.</dd>
               <dt>Web development frameworks (server)</dt>
               <dd>Expert in Zend Framework, Django, Flask, Tornado and Node.JS; Proficient in Ruby on Rails and Sinatra.</dd>
               <dt>Web development frameworks (client)</dt>
@@ -104,13 +104,13 @@
               <dt>Version Control Systems</dt>
               <dd>Git, SVN and Mercurial.</dd>
               <dt>DevOps technologies</dt>
-              <dd>Docker, Vagrant, Joyent Triton, Convox, Ansible, Chef, Fabric.</dd>
+              <dd>Docker, Vagrant, Autopilot Pattern, Consul, Terraform, Convox, Ansible, Chef, Fabric.</dd>
               <dt>Other tools and technologies</dt>
               <dd>AJAX, web sockets, Phonegap, Photoshop, Zebra Tester.</dd>
               <dt>Akamai solutions</dt>
               <dd>Dynamic Site Accelerator, NetStorage, Site Shield, Kona Web Application Firewall, Luna.</dd>
               <dt>Hosting and Cloud services</dt>
-              <dd>Rackspace, Akamai, AWS, New Relic, Apica.</dd>
+              <dd>Rackspace, Akamai, AWS, Joyent Triton, New Relic, Apica.</dd>
             </dl>
           </div>
           <div class="divider"></div>
