Update conference info.

--- a/public/index.html
+++ b/public/index.html
@@ -142,9 +142,9 @@
             <h5><i class="tiny mdi-hardware-keyboard-arrow-right"></i>Conferences</h5>
             <dl>
               <dt><a href="http://monitorama.com/">Monitorama</a></dt>
-              <dd>Portland 2017</dd>
+              <dd>Portland 2017, 2019</dd>
               <dt><a href="http://futurestack.io/">FutureStack</a></dt>
-              <dd>San Francisco 2015, 2016</dd>
+              <dd>San Francisco 2015, 2016, 2018, New York 2017</dd>
               <dt><a href="http://conferences.oreilly.com/oscon/open-source">OSCON</a></dt>
               <dd>Portland 2013, Austin 2016</dd>
               <dt><a href="https://futureinsightslive.com">Future Insights Live</a></dt>
